--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -45,3 +45,43 @@
         max-width: 50%;
     }
 }
+
+.progress_bar {
+    text-align: center;
+}
+
+#tooltip {
+    position: absolute;
+    height: auto;
+    width: auto;
+    z-index: 100;
+    background: #fff;
+    color: #000;
+    border: solid 1px #000;
+    padding: 10px;
+    display: none;
+}
+
+.tooltip .arrow {
+    left: 15px;
+    width: .4rem;
+    height: .8rem;
+    display: block;
+    position: absolute;
+    bottom: 0;
+}
+
+.tooltip .arrow:before {
+    position: absolute;
+    content: "";
+    border-color: transparent;
+    border-style: solid;
+    bottom: -8px;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 5px solid #000;
+}
+
+.ol-map {
+    position: relative;
+}
